# webCarScrapper

./: README.md  docker-compose.yml
client/: Dockerfile  next.config.mjs
client/src/app/: layout.tsx  page.tsx
client/src/app/api/: router.ts
client/src/app/cars/[id]/: page.tsx
client/src/app/login/: page.tsx
client/src/components/: car-list.tsx  header.tsx
client/src/lib/: auth-context.tsx  backend-api.ts  mock-data.ts  types.ts
server/: .env.example  .gitignore  Dockerfile.api  Dockerfile.worker  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 47be92b7dba4_add_translations_table.py  5708243efd59_update_car_model.py  82da18b72fbb_add_total_price_to_car_model.py  900d2c60d5f9_add_translations_table.py  9b26565c9f58_add_created_at_to_cars.py  be201adf9309_create_cars_table.py
server/src/: main.py
server/src/core/: auth.py  db.py  dependencies.py  redis.py
server/src/features/auth/: controller.py  routes.py  service.py
server/src/features/cars/: controller.py  model.py  repository.py  routes.py  schema.py  service.py
server/src/features/cars/scraper/: cleaning.py  dictionary.py  normalizer.py  parser.py  scraper.py  translator.py  validator.py
server/src/features/translations/: model.py  repository.py  service.py
server/src/jobs/: cars_job.py  scheduler.py  state.py
