[project]
name = "car-scraper"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy",
    "alembic",
    "asyncpg",
    "playwright",
    "beautifulsoup4",
    "python-dotenv>=1.2.2",
    "pyjwt>=2.12.1",
    "uvicorn>=0.42.0",
    "fastapi>=0.135.1",
    "watchfiles>=1.1.1",
    "psycopg2-binary>=2.9.11",
    "python-jose[cryptography]>=3.5.0",
    "redis>=7.3.0",
    "deep-translator>=1.11.4",
    "mako>=1.3.10",
]